changed font and fixed spacing in about me section, fixed flexbox in my work section and added border color to imgs, added title boxes for each work img, added media queries

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,6 +1,9 @@
-/* * {
-    font-family: fantasy;
-} */
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-sizing: border-box;
+}
 
 html {
     scroll-behavior: smooth;
@@ -67,6 +70,12 @@ header h1 {
     font-family: fantasy;
 }
 
+.about-p {
+    color: #363636;
+    line-height: 1.5;
+    font-family: sans-serif;
+}
+
 .main-section-content {
     width: 900px;
 }
@@ -77,6 +86,7 @@ header h1 {
     justify-content: space-evenly;
     align-items: center;
     background-color: orange;
+    padding: 40px;
 }
 
 #work-imgs-container, #contact-container {
@@ -95,14 +105,56 @@ header h1 {
     height: 400px;
     background-image: url("..//images/runbuddy.jpeg");
     background-size: cover;
+    display: flex;
+    align-items: flex-end;
+    border: 8px solid rgba(0, 128, 0, 1);
+}
+
+.pic-label {
+    height: 50px;
+    background-color: rgba(0, 128, 0, 1);
+    display: flex;
+    align-content: space-around;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 32px;
 }
 
 .half-box {
     width: 435px;
     height: 350px;
-    background-image: url("https://images.unsplash.com/photo-1636215570723-ceacca612687?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80");
     margin-top: 50px;
     background-size: cover;
+    border: 8px solid rgba(0, 128, 0, 1);
+    display: flex;
+    align-items: flex-end;
+}
+
+.box {
+    position: relative;
+    width: 100%;
+}
+
+.box-title {
+    position: relative;
+    z-index: 10;
+    background-color: black;
+    display: inline-block;
+    padding: 15px;
+    top: 40%;
+}
+
+.box-title-text {
+    color: white;
+    font-size: 28px;
+    font-weight: 600;
+    font-style: italic;
+    display: inline-block;
+}
+
+.box-content {
+    position: relative;
+    height: 100%;
 }
 
 #half-box1 {
@@ -128,6 +180,48 @@ header h1 {
     width: 8px;
 }
 
-/* .contact-content {
+@media screen and (max-width: 980px) {
+    /* this will be applied to any screen smaller than 980px */
+    .half-box {
+        width: 100%;
+    }
 
-} */
+    #about-title, #work-title, #contact-title {
+        font-size: 20px;
+    }
+
+    .click-container {
+        width: 100%;
+        height: 100%;
+    }
+
+    #about, #contact {
+        padding: 40px;
+        height: 100%;
+    }
+
+    .main-section-content {
+        width: 600px;
+    }
+}
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+
+@media screen and (max-width: 768px) {
+    /* this will be applied on any screen between 768px and 576px */
+    .main-section-content {
+        width: 500px;
+    }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    /* this will be applied on any screen smaller than 575px */
+    .main-section-content {
+        width: 400px;
+        flex-direction: column;
+    }
+
+    header h1 {
+        font-size: 32px;
+    }
+}
